--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "1.3.0",
     "axios": "^0.21.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.34.0"
+    "react-hook-form": "^6.15.5",
+    "sass": "^1.34.0",
+    "yup": "^0.32.9"
   }
 }
